Remove document.text

--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
       <script type="text/javascript" src="main.js"></script>
       <script type="text/javascript" src="entities.js"></script>
     </div>
-    <div id="info" style="text-align:left; margin-top:20px;">
-      <div>
-        <div style ="font-size: 14px; font-family: Courier New">
-           <div id="game_state"></div>
-           <div id="instructions"></div>
-        </div>
-      </div>
-    </div>
-  </div>
+    <div id="info" style="text-align:left; margin-top:20px;"></div>
+</div>
 </body>
 </html>
